Designed and created subpage for recipe details
Changed recipes.js to improve performance (added id, story, ingredients, steps and change image element)

Fixed scrolling problem with useEffect

--- a/recipe-project/src/css/App.css
+++ b/recipe-project/src/css/App.css
@@ -1,3 +1,12 @@
 .App{
 	font-family: "Courier New";
 }
+
+a {
+	text-decoration: none;  /* Removes the underline */
+	color: inherit;         /* Inherits the text color from the parent, which is likely black */
+  }
+
+.Page-bottom{
+	height: 10vh;
+}
